# search-agent-rl

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  env.example  inference.py  log_utils.py  models.py  openenv.yaml  pyproject.toml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/todos/pending/: 2026-04-16-fix-searchenvironment-episode-lifecycle.md  2026-04-16-improve-openenv-searchenvironment-design.md
data/: __init__.py
data/generator/: __init__.py
data/generator/domains/sec/: verify.py
data/generator/domains/web/: utils.py  verify.py
docs/: architecture.md  reward-design.md
docs/research/: context1-summary.md
sample/: __init__.py
searcharena/: __init__.py  client.py  models.py
searcharena/engine/: __init__.py  core.py  factory.py  handlers.py  observations.py  retrieval.py  rewards.py
searcharena/training/: __init__.py  curriculum.py  datasets.py  evaluation.py  metrics.py
server/: __init__.py  app.py  environment.py  retrieval.py  rewards.py  web_retrieval.py
server/tasks/: __init__.py  corpus.json  tasks.json
src/searcharena/: __init__.py  client.py  models.py
src/searcharena/agent/: __init__.py  action.py  config.py  inference.py  llm.py  logging.py  policy.py  runner.py  state.py  tools.py
src/searcharena/env/: __init__.py  dispatcher.py  environment.py  observations.py  policies.py  state.py
src/searcharena/retrieval/: __init__.py  base.py  bm25.py  corpus.py  rerank.py
src/searcharena/rewards/: __init__.py  calculator.py  metrics.py  schedule.py  tracker.py
src/searcharena/server/: __init__.py  app.py  dependencies.py  environment.py
src/searcharena/server/routers/: episodes.py  system.py  tasks.py
src/searcharena/tasks/: __init__.py  loader.py  sample.py
src/searcharena/tasks/resources/: __init__.py
src/searcharena/tasks/resources/sample/: __init__.py  berlin_wall.json  curie.json  facebook_acquisitions.json  instagram.json  whatsapp.json
src/searcharena/training/: config.py  datasets.py  evaluation.py  metrics.py  prompts.py
tests/: conftest.py  test_edge_cases.py  test_environment.py  test_retrieval.py  test_rewards.py  test_server.py  test_tasks.py  test_training.py
tests/contracts/: test_env_contract.py  test_openenv_runtime.py  test_packaging_contract.py
tests/integration/server/: test_server.py
tests/unit/env/: test_edge_cases.py  test_environment.py
tests/unit/retrieval/: test_retrieval.py
tests/unit/rewards/: test_rewards.py
tests/unit/tasks/: test_tasks.py
tests/unit/training/: test_training.py
tools/data_generator/core/: __init__.py  utils.py
tools/data_generator/domains/epstein/: __main__.py  explore.py  index.py  utils.py  verify.py
tools/data_generator/domains/patents/: __main__.py  extract.py  generate.py  index.py
tools/data_generator/domains/sec/: collect.py  explore.py  extend.py  utils.py  verify.py
tools/data_generator/domains/web/: __main__.py  distract.py  explore.py  extend.py  index.py
