[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-search_env"
version = "0.1.0"
description = "Search Env environment for OpenEnv"
requires-python = ">=3.11"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "openai>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.0.0",
]
datagen = [
    "anthropic>=0.75.0",
    "chromadb>=1.4.0",
    "tiktoken>=0.12.0",
    "rich>=14.3.4",
    "requests>=2.32.5",
]
datagen-web = [
    "openenv-search_env[datagen]",
]
datagen-sec = [
    "openenv-search_env[datagen]",
]
datagen-patents = [
    "openenv-search_env[datagen]",
    "python-docx>=1.2.0",
    "pandas>=2.0.0",
    "httpx[http2]>=0.28.1",
]

[project.scripts]
server = "search_env.server.app:main"
inference = "search_env.inference:cli"

[tool.setuptools]
include-package-data = true
packages = ["search_env", "search_env.server"]
package-dir = { "search_env" = ".", "search_env.server" = "server" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"